fixed file layout and removed white space

--- a/CSS/second.css
+++ b/CSS/second.css
@@ -24,7 +24,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 #navigation {
-    
+
 }
 #navigation li{
     float:left;
@@ -49,7 +49,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     padding: 10px;
     margin: 12px;
     font-size: 12px;
-    
+
 }
 #navigation ul li {
 
@@ -89,7 +89,7 @@ p {
     width: 250px;
 }
 #sidepanel h1 {
-    font-size: 25px;
+    font-size: 15px;
 }
 #sidepanel h2 {
     font-size: 13px;
@@ -153,6 +153,7 @@ h2 {
     filter: progid:DXImageTransform.Microsoft.Shadow(Color='#000000',Direction=135,Strength=4);
     -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Color='#000000',Direction=135,Strength=4)";
     font-family: 'Arvo', serif;
+    font-weight:normal;
     font-size: 12px;
 }
 .button :hover {
@@ -173,6 +174,8 @@ h2 {
 }
 .green {
     color:#659453;
+    font-family: 'Arvo', serif;
+    font-weight:normal;
 }
 
 #blog h1 {
@@ -182,7 +185,7 @@ h2 {
     padding-top:85px;
 }
 
-#blog h2 { 
+#blog h2 {
     font-size:13px;
     font-family: 'Arvo', serif;
     font-weight:normal;
@@ -192,4 +195,5 @@ h2 {
     font-family:"Times New Roman",Georgia,Serif;
     font-size: 9px;
     text-decoration: underline;
+    color:#659453;
 }
